client/blocks/reader-post-card/style.scss
/* ... */
.reader-post-card__conversation-post {
	.comments__comment-actions {
		display: flex;
		justify-content: flex-start;
	}
}

.reader-post-card__photo {
	border-radius: 4px;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-basis: auto;
	flex-grow: 1;
	cursor: pointer;
	position: relative;
	top: 0;
	height: 300px;
	margin-right: 0;
	margin-bottom: 0;
	max-width: 100%;

	&:hover {
		cursor: zoom-in;
	}

	&.is-expanded {
		background-position: center !important;
		border-radius: 4px;
		min-width: 100%;
		max-width: 100%;
		background-size: cover;

		&:hover {
			cursor: pointer;
		}
	}

	&::after {
		content: "";
		position: absolute;
		pointer-events: none;
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;
		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
		border-radius: 4px;
	}

	&::before {
		content: "";
		background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.37) 65%, rgba(0, 0, 0, 1) 110%);
		height: 80px;
		opacity: 0.4;
		position: absolute;
		bottom: 0;
		left: 0;
		width: 100%;
		border-radius: 0 0 4px 4px;
	}
}

.reader-post-card__byline {
	display: flex;
	font-size: $font-body-small;
}

.reader-post-card__author::after {
	content: ", ";
}

// Need .reader__content to override .reader__content a
.reader__content .reader-post-card__byline-secondary-item,
.reader__content .reader-post-card__tag-link {
	color: var(--color-neutral-40);
	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
	font-size: 12px;
	margin-top: 2px;
	cursor: pointer;
	&:hover {
		color: var(--color-text-subtle);
	}
}

.reader__content .reader-post-card__tag-link {
	color: var(--color-neutral-100);
	&:focus {
		outline: dotted 1px;
	}
}

.reader-feed-header__seen-button:focus {
	outline: dotted 1px;
}

.reader-post-card__byline-secondary-bullet {
	color: var(--color-text-subtle);
	display: inline-block;
	margin: 0 4px;
}

.reader-post-card__byline-details {
	color: var(--color-primary);
	width: 100%;
	position: relative;
	top: 3px;
}

// Fix for IE11 unable to handle nested flexbox min-height.
// See issue: https://github.com/Automattic/wp-calypso/issues/9412
.is-reader-page .reader-post-card.is-gallery .reader-post-card__post-details {
	flex: inherit;
}

.reader-post-card__byline-site {
	font-family: $sans;
	font-weight: 600;
	margin-bottom: 2px;
	overflow: hidden;
	position: relative;
	height: 20px;
	width: calc(100% - 25px);

	&::after {
		@include long-content-fade( $size: 10% );
	}
}

.reader-post-card__author-and-timestamp {
	align-items: flex-start;
	display: flex;
	flex-direction: row;
	font-family: $sans;
	margin-top: -2px;
}

.reader-post-card__byline-secondary {
	display: inline-table;
}

.reader-post-card__tags {
	color: var(--color-neutral-70);
	display: flex;
	flex-direction: row;
	margin-top: 4px;
	margin-bottom: 8px;
	gap: 8px;
	flex-wrap: wrap;

	&::after {
		@include long-content-fade( $size: 35px );
	}
}

.reader-post-card__tag {
	white-space: nowrap;
	border-radius: 4px;
	padding: 0 9px 2px;
	background-color: var(--color-neutral-0);
	align-self: center;
}

.reader-post-card__byline .reader-avatar {
	flex-shrink: 0;

	.gravatar,
	.gridicon {
		float: left;
		height: 40px;
		margin: 4px 12px 0 0;
		vertical-align: text-top;
		width: 40px;
	}

	&.has-site-icon {
		margin: 0 12px 0 0;
	}

	.site-icon {
		width: 40px !important;
		height: 40px !important;
		/* stylelint-disable-next-line declaration-property-unit-allowed-list */
		font-size: 40px !important;
		line-height: 40px !important;
	}

	img {
		border-radius: 100%;
	}
}

.reader-post-card .has-site-and-author-icon .gravatar {
	display: none;
}

.reader-post-card__link {
	color: var(--color-neutral-100);
	cursor: pointer;
	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
	font-size: 15px;

	&:hover {
		color: var(--color-text-subtle);
	}

	&:visited {
		color: var(--color-neutral-100);
	}
}

.reader-post-card__post {
	clear: both;
	display: flex;
	flex-direction: column;
	margin-left: 52px;

	.reader-post-card__post-details {
		width: 100%;
	}
}

@include breakpoint-deprecated( "<660px" ) {
	.reader-post-card__post {
		margin-left: 0;
	}
}

.reader-post-card.is-expanded-video .reader-post-card__post {
	flex-wrap: wrap;
}

.reader-post-card__post-details {
	font-family: $serif;
}

.reader-post-card__title {
	line-height: 1.4;
	margin-top: -4px;
	overflow-wrap: break-word;
}

// Needs to overwrite .reader__content a
.reader__content .reader-post-card__title-link,
.reader__content .reader-post-card__title-link:visited,
.reader-post-card__title-link,
.reader-post-card__title-link:visited {
	color: var(--color-neutral-100);
	cursor: pointer;
	font-size: $font-title-small;
	font-weight: 600;
	display: block;
	line-height: 29px;

	&:hover {
		color: var(--color-neutral-70);
	}
}

.reader-post-card .reader-excerpt {
	color: var(--color-neutral-80);
	font-family: $sans;
	font-size: $font-body;
	line-height: 22px;
	font-weight: 400;
	margin-top: 7px;
	word-break: break-word;
	position: relative;

	p {
		font-family: $sans;
		margin: 0;
	}
}
/* ... */

